--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -27,15 +27,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href=" ">Home<span class="sr-only">(current)</span></a>
             </li>
             {% if user.is_authenticated and user.is_superuser %}
             <li class="nav-item">
-                <a class="nav-link" href="#">Solicitações</a>
+                <a class="nav-link" href="/solicitacao">Solicitações</a>
             </li>
             {% endif %}
             <li class="nav-item">
                 <a class="nav-link" href="accounts/logout">Sair</a>
+            </li>
 
 
         </ul>
@@ -45,7 +46,7 @@
 <div class="container">
     <div class="py-3 text-center bg-primary text-white">
 
-        <h1 class="mb-3">Galeria Casamento</h1>
+        <h1 class="mb-3">Galeria de Casamento</h1>
 
         <h2 class="mb-3">Envie sua imagem</h2>
         <form action="" method="post" enctype="multipart/form-data">
@@ -58,21 +59,32 @@
     </div>
     <div class="row">
         {% for x in img %}
+        {% if x.id > 10 %}
         <div class="col-sm-4">
             <div class="card m-2">
                 <img src="{{x.photo.url}}" alt="" class="card-img-top" height="200px">
                 <div class="card-footer">
                     <small class="text-muted">{{x.date}}</small>
                     {% if user.is_authenticated and user.is_superuser %}
+                    <div class="fav">
+                        {{fav.name}}
+                    </div>
+                    <button><a href="/delete/{{x.id}}">Delete me</a></button>
                     <form action="" method="POST">
                         {% csrf_token %}
 
-                        <input href=type="submit" class="btn btn-danger" value="Excluir">
+                        {% for fav in img %}
 
+                        {% endfor %}
                     </form>
                     {% endif %}
+
+                    <button class="btn btn-primary">Gostei</button>
+
+
                 </div>
             </div>
+            {% endif %}
         </div>
 
         {% endfor %}
@@ -89,5 +101,9 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+<footer>
+  <p><center>@edsonnborgess <br>
+    <h5>Versão beta</h5></center></p>
+</footer>
 </body>
 </html>
