--- a/myapp/templates/myapp/exclusao.html
+++ b/myapp/templates/myapp/exclusao.html
@@ -42,7 +42,7 @@
     </div>
 </nav>
 <body>
-<div class="alert alert-success" role="alert">
+<div class="alert alert-success" role="alert" align="center">
   <h4 class="alert-heading">Arquivo excluido</h4>
   <p>Você será redirecionado a página principal</p>
   <hr>
@@ -57,6 +57,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
             crossorigin="anonymous"></script>
+
     <footer>
         <p>
             <center>Author:@edsonnborgess <br>
