--- a/myapp/templates/myapp/home.html
+++ b/myapp/templates/myapp/home.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <!-- Required meta tags -->
+    <script src="/funcoes.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -10,6 +11,7 @@
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <title>Galeria Casamento</title>
+
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
@@ -43,12 +45,15 @@
     </div>
 </nav>
 <body>
-<div class="container">
+
+
+<div class="container" align="center">
     <div class="py-3 text-center bg-primary text-white">
 
         <h1 class="mb-3">Galeria de Casamento</h1>
 
         <h2 class="mb-3">Envie sua imagem</h2>
+        <h4> Após enviar, sua foto seguirá para análise do casal</h4>
         <form action="" method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {{form}}
@@ -57,11 +62,16 @@
 
 
     </div>
+
     <div class="row">
         {% for x in img %}
-        {% if x.id > 10 %}
+
+
         <div class="col-sm-4">
+            {% if x.tipo == 1 %}
+
             <div class="card m-2">
+
                 <img src="{{x.photo.url}}" alt="" class="card-img-top" height="200px">
                 <div class="card-footer">
                     <small class="text-muted">{{x.date}}</small>
@@ -69,7 +79,7 @@
                     <div class="fav">
                         {{fav.name}}
                     </div>
-                    <button><a href="/delete/{{x.id}}">Delete me</a></button>
+                    <button><a href="/delete/{{x.id}}">Excluir</a></button>
                     <form action="" method="POST">
                         {% csrf_token %}
 
@@ -79,14 +89,15 @@
                     </form>
                     {% endif %}
 
+
                     <button class="btn btn-primary">Gostei</button>
+
 
 
                 </div>
             </div>
             {% endif %}
         </div>
-
         {% endfor %}
 
     </div>
@@ -102,8 +113,10 @@
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
 <footer>
-  <p><center>@edsonnborgess <br>
+    <p>
+        <center>@edsonnborgess <br>
     <h5>Versão beta</h5></center></p>
 </footer>
 </body>
+
 </html>
